# k8s-connector

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml
src/cfg/: logging.yaml
src/k8s_connector/: __init__.py  gcloud_sdk.py  k8s.py
